// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`encodeTxMetadata 1`] = `
"BencodexDictionary(5) {
  Uint8Array(1) [
    110
  ] => 123n,
  Uint8Array(1) [
    115
  ] => Uint8Array(20) [
    38,
    131,
    68,
    186,
    70,
    230,
    202,
    42,
    138,
    80,
    150,
    86,
    85,
    72,
    185,
    1,
    139,
    198,
    135,
    206
  ],
  Uint8Array(1) [
    117
  ] => [],
  Uint8Array(1) [
    112
  ] => Uint8Array(33) [
    2,
    0,
    224,
    39,
    9,
    204,
    12,
    5,
    29,
    193,
    5,
    24,
    140,
    69,
    74,
    46,
    126,
    247,
    179,
    107,
    133,
    218,
    52,
    82,
    157,
    58,
    188,
    25,
    104,
    22,
    124,
    245,
    79
  ],
  Uint8Array(1) [
    116
  ] => '2022-05-23T01:02:00.000000Z'
}"
`;

exports[`encodeTxMetadata 2`] = `
Uint8Array [
  100,
  49,
  58,
  110,
  105,
  49,
  50,
  51,
  101,
  49,
  58,
  112,
  51,
  51,
  58,
  2,
  0,
  224,
  39,
  9,
  204,
  12,
  5,
  29,
  193,
  5,
  24,
  140,
  69,
  74,
  46,
  126,
  247,
  179,
  107,
  133,
  218,
  52,
  82,
  157,
  58,
  188,
  25,
  104,
  22,
  124,
  245,
  79,
  49,
  58,
  115,
  50,
  48,
  58,
  38,
  131,
  68,
  186,
  70,
  230,
  202,
  42,
  138,
  80,
  150,
  86,
  85,
  72,
  185,
  1,
  139,
  198,
  135,
  206,
  49,
  58,
  116,
  117,
  50,
  55,
  58,
  50,
  48,
  50,
  50,
  45,
  48,
  53,
  45,
  50,
  51,
  84,
  48,
  49,
  58,
  48,
  50,
  58,
  48,
  48,
  46,
  48,
  48,
  48,
  48,
  48,
  48,
  90,
  49,
  58,
  117,
  108,
  101,
  101,
]
`;
